feat: Added CNN implementation using Pytorch and reformatting all notebooks

--- a/neural_network/CNN_Pytorch.ipynb
+++ b/neural_network/CNN_Pytorch.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "# Downloading MNIST dataset from Pytorch\n",
     "dataset = datasets.MNIST(\n",
-    "    root=\"/Users/harshit/Documents/Dalhousie University/Machine Learning/Assisgnments/A1\",\n",
+    "    root=\"./data\",\n",
     "    download=True,\n",
     "    train=True,\n",
     "    transform=transforms.ToTensor(),\n",
