--- a/machine_learning/Decision Tree regression with k-fold cross validation/k-fold cross-validation of decision tree regression.ipynb
+++ b/machine_learning/Decision Tree regression with k-fold cross validation/k-fold cross-validation of decision tree regression.ipynb
@@ -5016,7 +5016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5030,7 +5030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
