--- a/machine_learning/Naive_Bayes/naive_bayes.ipynb
+++ b/machine_learning/Naive_Bayes/naive_bayes.ipynb
@@ -1637,7 +1637,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1651,7 +1651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
