--- a/machine_learning/Linear_Regression/LinearRegression.ipynb
+++ b/machine_learning/Linear_Regression/LinearRegression.ipynb
@@ -242,7 +242,7 @@
       "source": [
         "# y = f(x)\n",
         "# we have set of input and set of output based on input dataset\n",
-        "# what we have to find out is f(x) which will be the relation between x and y (i.e input and output)\n. There might not be a direct linear relation between the input data and any linear equation but we have to choose the most closest one such that the cost function is minimum for that.",
+        "# what we have to find out is f(x) which will be the relation between x and y (i.e input and output)\n. #There might not be a direct linear relation between the input data and any linear equation but we have to choose the most closest one such that the cost function is minimum for that.",
         "\n"
       ],
       "execution_count": 0,
