--- a/numerical_methods/Runge_Kutta_Methods.ipynb
+++ b/numerical_methods/Runge_Kutta_Methods.ipynb
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Runga Kutta methoda are used to approximate the value to simultaneous non-linear differential equations. <br>\n",
+        "Runga Kutta methods are used to approximate the value to simultaneous non-linear differential equations. <br>\n",
         "More about Runga Kutta Methods [here](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods).\n",
         "\n",
         "Here we will try to solve the following three equations with unknown variables S, I and R.\n",
